# mcp-quickstart

./: AGENTS.md  CONTRIBUTING.md  README.md  llms.txt  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: e2e.mjs
scripts/fixtures/: sample-curl.txt  sample-openapi.json
src/: curl.js  index.js  openapi.js  scaffold.js  schema.js
templates/python-stdio/: README.md  _env.example  pyproject.toml  server.py  test_tools.py  tools.py
templates/typescript-cloudflare/: README.md  package.json  wrangler.jsonc
templates/typescript-cloudflare-openapi/: README.md  package.json  tsconfig.json  wrangler.jsonc
templates/typescript-cloudflare-openapi/src/: http.ts  index.ts
templates/typescript-cloudflare/src/: index.ts  tools.ts
templates/typescript-openapi/: README.md  _env.example  package.json
templates/typescript-openapi/src/: http.ts  index.ts
templates/typescript-stdio/: LICENSE  README.md  _env.example  package.json  tsconfig.json
templates/typescript-stdio/src/: index.ts  tools.test.ts  tools.ts
