[project]
name = "{{projectName}}"
version = "0.1.0"
description = "An MCP server scaffolded with mcp-forge"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py", "tools.py"]

[tool.pytest.ini_options]
testpaths = ["."]
